Remove console analysis output; add get_report to generate PDF report

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ __pycache__/analysis.cpython-314.pyc
 __pycache__/data.cpython-314.pyc
 __pycache__/indicators.cpython-314.pyc
 __pycache__/plots.cpython-314.pyc
+*.pdf
